Fix left align in channel index

--- a/app/assets/stylesheets/redcursor_app.css.scss
+++ b/app/assets/stylesheets/redcursor_app.css.scss
@@ -260,7 +260,6 @@ form {
       }
       .user-mini {
         padding-left: 8px;
-        text-align: center;
 		
         .user-name {
           padding-left: 10px;
